--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "access": "public"
   },
   "keywords": [
-    "marcuth"
+    "afilimax",
+    "brazilian marketplaces scraper",
+    "brazilian afiliate marketing"
   ],
   "author": "Marcuth",
   "license": "MIT",
