--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "prettier-plugin-sort-imports": "^1.8.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "zod": "^4.3.6"
   }
 }
